[gd_scene load_steps=26 format=2]

[ext_resource path="res://resources/character/New Version/Character SHF.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player/Movement.gd" type="Script" id=2]
[ext_resource path="res://scripts/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://resources/Objects/Lights/round_light.png" type="Texture" id=4]
[ext_resource path="res://resources/Sounds/walk_sound.mp3" type="AudioStream" id=5]
[ext_resource path="res://resources/Sounds/jump.mp3" type="AudioStream" id=6]
[ext_resource path="res://resources/Sounds/lighter.mp3" type="AudioStream" id=7]
[ext_resource path="res://resources/Sounds/match-lighting-candle.mp3" type="AudioStream" id=8]
[ext_resource path="res://resources/Sounds/fail_sound.mp3" type="AudioStream" id=9]
[ext_resource path="res://resources/character/Text baloon/text baloon.png" type="Texture" id=10]

[sub_resource type="Animation" id=5]
resource_name = "Crouch"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Death"
length = 4.4
step = 0.075
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.25, 2.4, 2.55, 2.625, 2.7, 2.925, 3.15, 3.45, 3.525, 3.825, 3.9, 3.975, 4.05, 4.125, 4.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("SoundsEffects")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0.225 )
}

[sub_resource type="Animation" id=6]
resource_name = "Fire"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 13, 14 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("SoundsEffects")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 1.90687,
"start_offset": 0.5,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=8]
resource_name = "Fire_Start"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("SoundsEffects")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 1.04529,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=9]
resource_name = "Gesture_1"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.800242, 0.850394, 0.900082, 0.950696, 1.0003, 1.30196, 2.30822, 4.3012, 4.39549, 6.30312, 6.40561 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("SoundsEffects")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0315163,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=11]
resource_name = "Jump_2"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("SoundsEffects")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SoundsEffects:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -10.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 0.53
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28, 29, 30, 31 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("SoundsEffects")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.547924,
"start_offset": 0.08,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.145401,
"start_offset": 0.48,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0.1, 0.4 )
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37, 18 )

[sub_resource type="CircleShape2D" id=10]
radius = 25.02

[sub_resource type="Animation" id=15]
resource_name = "Idle"
length = 3.0

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "TextBalloon"
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0, 1 ]
}

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 26
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Crouch = SubResource( 5 )
anims/Death = SubResource( 12 )
anims/Fire = SubResource( 6 )
anims/Fire_Start = SubResource( 8 )
anims/Gesture_1 = SubResource( 9 )
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 7 )
anims/Jump_2 = SubResource( 11 )
anims/RESET = SubResource( 3 )
anims/Walk = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 4 )
scale = Vector2( 0.5, 1 )
shape = SubResource( 1 )

[node name="Movement" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -15 )
scale = Vector2( 0.11377, 0.11377 )
enabled = false
texture = ExtResource( 4 )

[node name="CandelsDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CandelsDetector"]
shape = SubResource( 10 )

[node name="LoseFuelTimer" type="Timer" parent="."]

[node name="SoundsEffects" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 22, -27 )
texture = ExtResource( 10 )
hframes = 2

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/Idle = SubResource( 15 )
anims/RESET = SubResource( 13 )
anims/TextBalloon = SubResource( 14 )

[connection signal="death_signal" from="." to="." method="_on_Player_death_signal"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="area_entered" from="CandelsDetector" to="." method="_on_CandelsDetector_area_entered"]
[connection signal="area_exited" from="CandelsDetector" to="." method="_on_CandelsDetector_area_exited"]
[connection signal="timeout" from="LoseFuelTimer" to="." method="_on_LoseFuelTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_AnimationPlayer2_animation_finished"]
